--- a/examples/cv/skills.tex
+++ b/examples/cv/skills.tex
@@ -12,27 +12,27 @@
 %---------------------------------------------------------
   \cvskill
     {DevOps} % Category
-    {AWS, Docker, Kubernetes, Rancher, Vagrant, Packer, Terraform, Jenkins, CircleCI} % Skills
+    {Vercel, Appveyor, Jenkins, CircleCI} % Skills
 
 %---------------------------------------------------------
   \cvskill
     {Back-end} % Category
-    {Koa, Express, Django, REST API} % Skills
+    {Express, Django, Django REST Framework} % Skills
 
 %---------------------------------------------------------
   \cvskill
     {Front-end} % Category
-    {Hugo, Redux, React, HTML5, LESS, SASS} % Skills
+    {Redux, React, HTML5, SASS} % Skills
 
 %---------------------------------------------------------
   \cvskill
     {Programming} % Category
-    {Node.js, Python, JAVA, OCaml, LaTeX} % Skills
+    {Node JS, Python, JavaScript, TypeScript} % Skills
 
 %---------------------------------------------------------
   \cvskill
     {Languages} % Category
-    {Korean, English, Japanese} % Skills
+    {English} % Skills
 
 %---------------------------------------------------------
 \end{cvskills}
