--- a/examples/resume/extracurricular.tex
+++ b/examples/resume/extracurricular.tex
@@ -1,41 +1,89 @@
-%-------------------------------------------------------------------------------
+%----------------------------------------------------------------------------------------
 %	SECTION TITLE
-%-------------------------------------------------------------------------------
-\cvsection{Extracurricular Activity}
+%----------------------------------------------------------------------------------------
 
+\cvsection{Open Source Projects}
 
-%-------------------------------------------------------------------------------
-%	CONTENT
-%-------------------------------------------------------------------------------
+%----------------------------------------------------------------------------------------
+%	SECTION CONTENT
+%----------------------------------------------------------------------------------------
+
 \begin{cventries}
 
-%---------------------------------------------------------
-  \cventry
-    {Core Member \& President at 2013} % Affiliation/role
-    {PoApper (Developers' Network of POSTECH)} % Organization/group
-    {Pohang, S.Korea} % Location
-    {Jun. 2010 - Jun. 2017} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of experience/contributions/knowledge
-        \item {Reformed the society focusing on software engineering and building network on and off campus.}
-        \item {Proposed various marketing and network activities to raise awareness.}
-      \end{cvitems}
-    }
+%------------------------------------------------
 
-%---------------------------------------------------------
-  \cventry
-    {Member} % Affiliation/role
-    {PLUS (Laboratory for UNIX Security in POSTECH)} % Organization/group
-    {Pohang, S.Korea} % Location
-    {Sep. 2010 - Oct. 2011} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of experience/contributions/knowledge
-        \item {Gained expertise in hacking \& security areas, especially about internal of operating system based on UNIX and several exploit techniques.}
-        \item {Participated on several hacking competition and won a good award.}
-        \item {Conducted periodic security checks on overall IT system as a member of POSTECH CERT.}
-        \item {Conducted penetration testing commissioned by national agency and corporation.}
-      \end{cvitems}
-    }
 
-%---------------------------------------------------------
+\cventry
+{Rich text editor for Material UI} % Description
+{Material RTE} % Name
+{\href{https://www.npmjs.com/package/material-rte}{\color{awesome-skyblue}NPM LINK} - \href{https://github.com/Ali60351/material-rte}{\color{awesome-skyblue}GITHUB LINK}} % LINK
+{} % Date(s)
+{ % Description(s) of experience/contributions/knowledge
+\begin{cvitems}
+\item {Implement a Rich Text Editor using Draft JS as a base.}
+\item {Style it using Material UI theme and add support for custom theme.}
+\item {Add additional features like variable support and hyperlinks.}
+\item {Made with React JS and TypeScript.}
+\end{cvitems}
+}
+
+%------------------------------------------------
+
+\cventry
+{Find Voice Actor Links in your Anime History} % Description
+{Seiyuu Nostalgia} % Name
+{\href{https://github.com/Ali60351/seiyuu-nostalgia}{\color{awesome-skyblue}GITHUB LINK} - \href{https://ali60351.github.io/seiyuu-nostalgia/}{\color{awesome-skyblue}WEBSITE LINK}} % LINK
+{} % Date(s)
+{ % Description(s) of experience/contributions/knowledge
+\begin{cvitems}
+\item {Dive into all watched shows and shows all roles acted by a certain voice actor.}
+\item {Made with Vue JS and GraphQL.}
+\end{cvitems}
+}
+
+%------------------------------------------------
+
+\cventry
+{API to easily convert and resize images} % Description
+{Image Processing API} % Name
+{\href{https://github.com/Ali60351/image-processing-api}{\color{awesome-skyblue}GITHUB LINK}} % LINK
+{} % Date(s)
+{ % Description(s) of experience/contributions/knowledge
+\begin{cvitems}
+\item {Implement image resizing and conversion using Sharp.}
+\item {API implemented with ExpressJS and TypeScript.}
+\end{cvitems}
+}
+
+%------------------------------------------------
+
+\cventry
+{A tool to quickly verify file integrity} % Description
+{Quick-FIV} % Name
+{\href{https://github.com/Ali60351/Quick-FIV}{\color{awesome-skyblue}GITHUB LINK} - \href{https://github.com/Ali60351/Quick-FIV/wiki}{\color{awesome-skyblue}WIKI LINK}} % LINK
+{} % Date(s)
+{ % Description(s) of experience/contributions/knowledge
+\begin{cvitems}
+\item {Developed application to verify integrity of files in inside a folder recursively.}
+\item {Functions by storing hashes of all files present inside a folder inside a JSON file.}
+\item {Made with NodeJS, Electron, Vue JS and Vuetify JS.}
+\end{cvitems}
+}
+
+%------------------------------------------------
+
+\cventry
+{An application to stay up to date with in game information directly through your desktop} % Description
+{Warframe Alerts} % Name
+{\href{https://github.com/WFCD/warframe-alerts-win}{\color{awesome-skyblue}GITHUB LINK}} % LINK
+{} % Date(s)
+{ % Description(s) of experience/contributions/knowledge
+\begin{cvitems}
+\item {Utilizes official RSS feed as data source.}
+\item {Created with C-Sharp and Windows Forms API.}
+\end{cvitems}
+}
+
+%------------------------------------------------
+
 \end{cventries}
