--- a/examples/resume/presentation.tex
+++ b/examples/resume/presentation.tex
@@ -1,38 +1,28 @@
-%-------------------------------------------------------------------------------
+%----------------------------------------------------------------------------------------
 %	SECTION TITLE
-%-------------------------------------------------------------------------------
-\cvsection{Presentation}
+%----------------------------------------------------------------------------------------
 
+\cvsection{Certifications}
 
-%-------------------------------------------------------------------------------
-%	CONTENT
-%-------------------------------------------------------------------------------
+%----------------------------------------------------------------------------------------
+%	SECTION CONTENT
+%----------------------------------------------------------------------------------------
+
 \begin{cventries}
 
-%---------------------------------------------------------
-  \cventry
-    {Presenter for <Hosting Web Application for Free utilizing GitHub, Netlify and CloudFlare>} % Role
-    {DevFest Seoul by Google Developer Group Korea} % Event
-    {Seoul, S.Korea} % Location
-    {Nov. 2017} % Date(s)
-    {
-      \begin{cvitems} % Description(s)
-        \item {Introduced the history of web technology and the JAM stack which is for the modern web application development.}
-        \item {Introduced how to freely host the web application with high performance utilizing global CDN services.}
-      \end{cvitems}
-    }
+%------------------------------------------------
 
-%---------------------------------------------------------
-  \cventry
-    {Presenter for <DEFCON 20th : The way to go to Las Vegas>} % Role
-    {6th CodeEngn (Reverse Engineering Conference)} % Event
-    {Seoul, S.Korea} % Location
-    {Jul. 2012} % Date(s)
-    {
-      \begin{cvitems} % Description(s)
-        \item {Introduced CTF(Capture the Flag) hacking competition and advanced techniques and strategy for CTF}
-      \end{cvitems}
-    }
+\cventry
+{UDEMY} % Role
+{React - The Complete Guide (incl Hooks, React Router, Redux)} % Event
+{\href{https://www.udemy.com/certificate/UC-76de0794-aca1-4e94-8f62-f791573322a0/}{\color{awesome-skyblue}LINK}} % Location
+{2021} % Date(s)
+{ % Description(s)
+%\begin{cvitems}
+%\item {Introduced CTF (Capture the Flag) hacking competition and advanced techniques and strategy for CTF}
+%\end{cvitems}
+}
 
-%---------------------------------------------------------
+%------------------------------------------------
+
 \end{cventries}
