--- a/examples/coverletter.tex
+++ b/examples/coverletter.tex
@@ -54,16 +54,16 @@
 %-------------------------------------------------------------------------------
 % Available options: circle|rectangle,edge/noedge,left/right
 \photo[circle,noedge,right]{profile}
-\name{Claud D.}{Park}
-\position{Software Architect{\enskip\cdotp\enskip}Security Expert}
-\address{42-8, Bangbae-ro 15-gil, Seocho-gu, Seoul, 00681, Rep. of KOREA}
+\name{Ali}{Nauman}
+\position{Senior Software Engineer{\enskip\cdotp\enskip}Full Stack Developer}
+\address{House No. 200, Block B, Iqbal Avenue Phase III, Lahore, Pakistan}
 
-\mobile{(+82) 10-9030-1843}
-\email{posquit0.bj@gmail.com}
+\mobile{(+92) 324-4208140}
+\email{ali60351@gmail.com}
 %\dateofbirth{January 1st, 1970}
-\homepage{www.posquit0.com}
-\github{posquit0}
-\linkedin{posquit0}
+% \homepage{www.posquit0.com}
+\github{ali60351}
+\linkedin{alinauman1}
 % \gitlab{gitlab-id}
 % \stackoverflow{SO-id}{SO-name}
 % \twitter{@twit}
@@ -76,7 +76,7 @@
 % \googlescholar{googlescholar-id}{}
 % \extrainfo{extra information}
 
-\quote{``Be the change that you want to see in the world."}
+\quote{``Motivation is the fuel for success"}
 
 
 %-------------------------------------------------------------------------------
@@ -86,13 +86,13 @@
 % The company being applied to
 \recipient
   {Company Recruitment Team}
-  {Google Inc.\\1600 Amphitheatre Parkway\\Mountain View, CA 94043}
+  {HeyJobs GmbH\\Berlin, Germany}
 % The date on the letter, default is the date of compilation
 \letterdate{\today}
 % The title of the letter
-\lettertitle{Job Application for Software Engineer}
+\lettertitle{Job Application for Senior Fullstack Engineer (Rails/React)}
 % How the letter is opened
-\letteropening{Dear Mr./Ms./Dr. LastName,}
+\letteropening{\\Dear Hiring Team,\\}
 % How the letter is closed
 \letterclosing{Sincerely,}
 % Any enclosures with the letter
@@ -109,8 +109,8 @@
 % Print the footer with 3 arguments(<left>, <center>, <right>)
 % Leave any of these blank if they are not needed
 \makecvfooter
-  {\today}
-  {Claud D. Park~~~·~~~Cover Letter}
+  {}
+  {Ali Nauman~~~·~~~Cover Letter}
   {}
 
 % Print the title with above letter information
@@ -121,14 +121,27 @@
 %-------------------------------------------------------------------------------
 \begin{cvletter}
 
-\lettersection{About Me}
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ullamcorper neque sit amet lectus facilisis sed luctus nisl iaculis. Vivamus at neque arcu, sed tempor quam. Curabitur pharetra tincidunt tincidunt. Morbi volutpat feugiat mauris, quis tempor neque vehicula volutpat. Duis tristique justo vel massa fermentum accumsan. Mauris ante elit, feugiat vestibulum tempor eget, eleifend ac ipsum. Donec scelerisque lobortis ipsum eu vestibulum. Pellentesque vel massa at felis accumsan rhoncus.
+% \lettersection{About Me}
+% \lettersection{Why Google?}
+% \lettersection{Why Me?}
 
-\lettersection{Why Google?}
-Suspendisse commodo, massa eu congue tincidunt, elit mauris pellentesque orci, cursus tempor odio nisl euismod augue. Aliquam adipiscing nibh ut odio sodales et pulvinar tortor laoreet. Mauris a accumsan ligula. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse vulputate sem vehicula ipsum varius nec tempus dui dapibus. Phasellus et est urna, ut auctor erat. Sed tincidunt odio id odio aliquam mattis. Donec sapien nulla, feugiat eget adipiscing sit amet, lacinia ut dolor. Phasellus tincidunt, leo a fringilla consectetur, felis diam aliquam urna, vitae aliquet lectus orci nec velit. Vivamus dapibus varius blandit.
+This letter is to express my interest in your posting for Job Application for Senior Fullstack Engineer (Rails/React). With a Bachelor’s degree in Computer Science and hands-on experience using REST APIs with Django, JavaScript (ES6+), React, Redux and TypeScript, to create and implement web applications, I am confident that I would be a valuable addition to your team.\\
 
-\lettersection{Why Me?}
-Duis sit amet magna ante, at sodales diam. Aenean consectetur porta risus et sagittis. Ut interdum, enim varius pellentesque tincidunt, magna libero sodales tortor, ut fermentum nunc metus a ante. Vivamus odio leo, tincidunt eu luctus ut, sollicitudin sit amet metus. Nunc sed orci lectus. Ut sodales magna sed velit volutpat sit amet pulvinar diam venenatis.
+At Arbisoft, for the most time I worked on the development of an Application Tracking System which manages the recruiting and hiring process, including job postings and job applications, as a lead front‐end developer. I’ve also worked on Arbisoft’s In‐house ERP (Enterprise Resource Planning) that empowers the organization by automating many HR and accounts functions. I also successfully collaborate on solutions with our product, QA, marketing teams and clients to offer the best user experience and to provide customers with more value.\\
+
+Your listed requirements closely match my background and skills. A few I would like to highlight that would enable me to contribute to your bottom line are:\\
+
+\begin{cvitems}
+\item{4 years of full-time experience with Javascript, Typescript, and React}
+\item{4 years experience with Python and Django}
+\item{Testing experience with Jasmine and Django Tests}
+\item{Experience in mentoring junior colleagues}
+\item{Excellent spoken and written English communication }
+\\\\
+\end{cvitems}
+
+I’ve attached a copy of my resume detailing my experience. I would enjoy an opportunity to chat about your upcoming plans and share with you how my achievements and experience in past projects can prove valuable. I am available for an interview at your most convenient time and date. I can be reached anytime via my cellphone at +92-324-4208140 or via email at ali60351@gmail.com. Thank you for your consideration.
+
 
 \end{cvletter}
 
