--- a/examples/cv/skills.tex
+++ b/examples/cv/skills.tex
@@ -12,7 +12,7 @@
 %---------------------------------------------------------
   \cvskill
     {DevOps} % Category
-    {Vercel, Appveyor, Jenkins, CircleCI} % Skills
+    {AWS, CircleCI, Vercel, Appveyor} % Skills
 
 %---------------------------------------------------------
   \cvskill
@@ -22,17 +22,17 @@
 %---------------------------------------------------------
   \cvskill
     {Front-end} % Category
-    {Redux, React, HTML5, SASS} % Skills
+    {Angular, React, Vue} % Skills
 
 %---------------------------------------------------------
   \cvskill
     {Programming} % Category
-    {Node JS, Python, JavaScript, TypeScript} % Skills
+    {Node JS, JavaScript, TypeScript, Python} % Skills
 
 %---------------------------------------------------------
   \cvskill
     {Languages} % Category
-    {English} % Skills
+    {English, Urdu} % Skills
 
 %---------------------------------------------------------
 \end{cvskills}
