--- a/examples/resume.tex
+++ b/examples/resume.tex
@@ -28,10 +28,10 @@
 
 % Color for highlights
 % Awesome Colors: awesome-emerald, awesome-skyblue, awesome-red, awesome-pink, awesome-orange
-%                 awesome-nephritis, awesome-concrete, awesome-darknight
-% \colorlet{awesome}{awesome-red}
+%                 awesome-emerald, awesome-concrete, awesome-darknight
+\colorlet{awesome}{awesome-skyblue}
 % Uncomment if you would like to specify your own color
-\definecolor{awesome}{HTML}{000000}
+% \definecolor{awesome}{HTML}{000000}
 
 % Colors for text
 % Uncomment if you would like to specify your own color
@@ -58,9 +58,9 @@
 \photo[circle,noedge,right]{profile}
 \name{Ali}{Nauman}
 \position{Senior Software Engineer{\enskip\cdotp\enskip}Full Stack Developer}
-\address{House No. 200, Block B, Iqbal Avenue Phase III, Lahore, Pakistan}
+\address{Amstelveen, North-Holland, Netherlands}
 
-\mobile{(+92) 324-4208140}
+\mobile{(+31)644630509}
 \email{ali60351@gmail.com}
 %\dateofbirth{January 1st, 1970}
 % \homepage{www.posquit0.com}
@@ -105,11 +105,12 @@
 \input{resume/summary.tex}
 \input{resume/experience.tex}
 % \input{resume/honors.tex}
+\newpage
 \input{resume/presentation.tex}
 % \input{resume/writing.tex}
 % \input{resume/committees.tex}
 \input{resume/education.tex}
-\newpage
+
 \input{resume/extracurricular.tex}
 
 \begin{figure}[h!]
