--- a/examples/resume/experience.tex
+++ b/examples/resume/experience.tex
@@ -11,10 +11,28 @@
 
 %---------------------------------------------------------
   \cventry
+    {B2B Order - Development Captain} % Job title
+    {Fashion Cloud} % Organization
+    {Amsterdam, Netherlands} % Location
+    {Jul. 2022 - Present} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of tasks/responsibilities
+        \item {Assist project manager in designing solutions which will enable us to meet the client requirements in a timely manner}
+        \item {Collaborate with designers to create designs for decided solutions}
+        \item {Assess how to tackle implementation of solutions and create tickets accordingly and handle their delegation}
+        \item {Handle cross team communication to ensure no one is blocked}
+        \item {Create RFCs to bring improvements to platform or processes}
+        \item {Give regular feedback and appraisals}
+        \item {Handle implementation of complex tasks autonomously}
+      \end{cvitems}
+    }
+
+%---------------------------------------------------------
+  \cventry
     {Unstack (Shopify Landing Page Platform) - Senior Frontend Developer} % Job title
     {Arbisoft} % Organization
     {Lahore, Pakistan} % Location
-    {Jan. 2022 - Present} % Date(s)
+    {Jan. 2022 - Jun. 2022} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Assist with implementation of custom flavor of JSX for purposes of template creation.}
@@ -24,7 +42,7 @@
     
 %---------------------------------------------------------
   \cventry
-    {Hirestream (In-House ATS Solution) - Lead Frontend Developer} % Job title
+    {Hirestream (In-House ATS Solution) - Frontend Developer} % Job title
     {} % Organization
     {} % Location
     {Mar. 2019 - Jan. 2022} % Date(s)
