--- a/examples/resume/summary.tex
+++ b/examples/resume/summary.tex
@@ -10,5 +10,5 @@
 \begin{cvparagraph}
 
 %---------------------------------------------------------
-Currently a Senior Full Stack Developer at a software services company called Arbisoft. 4 years of experience specializing in the frontend development. Loves Linux and Mac OS and enjoys to customize all of the development environment. Interested in devising a better problem-solving method for challenging tasks, and learning new technologies and tools if the need arises.
+Currently a Full Stack Developer at Fashion Cloud which provides several B2B solutions to automate and digitize the ordering of garments. 6 years of total development experience specializing in the front-end development. Currently acting as a development captain responsible for gathering requirements from project manager, translating requirements to actionable tasks, supervising the implementation of said tasks during their development and handling cross team communication.
 \end{cvparagraph}
