--- a/examples/cv/skills.tex
+++ b/examples/cv/skills.tex
@@ -12,7 +12,7 @@
 %---------------------------------------------------------
   \cvskill
     {DevOps} % Category
-    {AWS, CircleCI, Vercel, Appveyor} % Skills
+    {AWS, CircleCI, Vercel} % Skills
 
 %---------------------------------------------------------
   \cvskill
