--- a/examples/resume/experience.tex
+++ b/examples/resume/experience.tex
@@ -12,18 +12,18 @@
 %---------------------------------------------------------
   \cventry
     {B2B Order - Development Captain} % Job title
-    {Fashion Cloud} % Organization
+    {Fashion Cloud B.V.} % Organization
     {Amsterdam, Netherlands} % Location
     {Jul. 2022 - Present} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Assist project manager in designing solutions which will enable us to meet the client requirements in a timely manner}
-        \item {Collaborate with designers to create designs for decided solutions}
-        \item {Assess how to tackle implementation of solutions and create tickets accordingly and handle their delegation}
+        \item {Regularly collaborate with product managers and designers to create solutions for the platform}
+        \item {Plan implementation of solutions, create digestible tickets and handle their delegation}
         \item {Handle cross team communication to ensure no one is blocked}
-        \item {Create RFCs to bring improvements to platform or processes}
+        \item {Proactively identify problems in the platform and create RFCs to address them}
         \item {Give regular feedback and appraisals}
-        \item {Handle implementation of complex tasks autonomously}
+        \item {Provide support to my colleagues in their tasks}
+        \item {Stack: Angular, TypeScript, LESS, Node (Express), MongoDB, AWS (S3, EventBridge)}
       \end{cvitems}
     }
 
@@ -37,12 +37,13 @@
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Assist with implementation of custom flavor of JSX for purposes of template creation.}
         \item {Improve UX by adding additional properties and improving styles for template building blocks.}
+        \item {Stack: React, Redux, TypeScript, SCSS}
       \end{cvitems}
     }
-    
+
 %---------------------------------------------------------
   \cventry
-    {Hirestream (In-House ATS Solution) - Frontend Developer} % Job title
+    {Hirestream (In-House ATS Solution) - Full Stack Developer} % Job title
     {} % Organization
     {} % Location
     {Mar. 2019 - Jan. 2022} % Date(s)
@@ -55,6 +56,7 @@
         \item {Add Web Socket support for continuous user feedback.}
         \item {Implement payments using Stripe.}
         \item {Contribute most of the pages for the frontend using React.}
+        \item {Stack: React, Redux, TypeScript, SCSS, Django, PostgreSQL}
       \end{cvitems}
     }
 
@@ -69,6 +71,7 @@
         \item {Refactor codebase by shifting React class components to functional components.}
         \item {Create new pages using React and Redux.}
         \item {Improve test coverage using Django tests and JEST.}
+        \item {Stack: React, Redux, TypeScript, SCSS, Django, PostgreSQL}
       \end{cvitems}
     }
 
