--- a/examples/resume/summary.tex
+++ b/examples/resume/summary.tex
@@ -10,5 +10,5 @@
 \begin{cvparagraph}
 
 %---------------------------------------------------------
-Currently a Full Stack Developer at Fashion Cloud which provides several B2B solutions to automate and digitize the ordering of garments. 6 years of total development experience specializing in the front-end development. Currently acting as a development captain responsible for gathering requirements from project manager, translating requirements to actionable tasks, supervising the implementation of said tasks during their development and handling cross team communication.
+Currently a Full Stack Developer at Fashion Cloud which provides several B2B solutions to automate and digitize the ordering of garments. 6 years of total development experience specializing in the front-end development. Currently acting as a development captain responsible for gathering requirements from project manager, translating requirements to actionable tasks, supervising the implementation of said tasks during their development, handling cross team communication and helping my team to grow.
 \end{cvparagraph}
