--- a/examples/resume.tex
+++ b/examples/resume.tex
@@ -113,15 +113,7 @@
 
 \input{resume/extracurricular.tex}
 
-\begin{figure}[h!]
-  \includegraphics[
-  width=3cm,
-  height=3cm,
-  keepaspectratio
-  ]{sign.png}
-\end{figure}
-
-\paragraphstyle{\today}
+\paragraphstyle{Last Modified: \today}
 
 %-------------------------------------------------------------------------------
 \end{document}
