--- a/examples/resume/experience.tex
+++ b/examples/resume/experience.tex
@@ -23,7 +23,9 @@
         \item {Proactively identify problems in the platform and create RFCs to address them}
         \item {Give regular feedback and appraisals}
         \item {Provide support to my colleagues in their tasks}
-        \item {Stack: Angular, TypeScript, LESS, Node (Express), MongoDB, AWS (S3, EventBridge)}
+        \item {Implement scalable solutions for the platform}
+        \item {Avoid technical debt and handle it when it arises}
+        \item {Stack: Angular, TypeScript, LESS, Node (Express), MongoDB, AWS (S3, EventBridge), Jest, Storybook}
       \end{cvitems}
     }
 
