Update cover letter

--- a/examples/coverletter.tex
+++ b/examples/coverletter.tex
@@ -56,9 +56,9 @@
 \photo[circle,noedge,right]{profile}
 \name{Ali}{Nauman}
 \position{Senior Software Engineer{\enskip\cdotp\enskip}Full Stack Developer}
-\address{House No. 200, Block B, Iqbal Avenue Phase III, Lahore, Pakistan}
+\address{Amstelveen, North-Holland, Netherlands}
 
-\mobile{(+92) 324-4208140}
+\mobile{(+31)644630509}
 \email{ali60351@gmail.com}
 %\dateofbirth{January 1st, 1970}
 % \homepage{www.posquit0.com}
@@ -86,17 +86,17 @@
 % The company being applied to
 \recipient
   {Company Recruitment Team}
-  {HeyJobs GmbH\\Berlin, Germany}
+  {NS Groep N.V.\\Utrecht, Netherlands}
 % The date on the letter, default is the date of compilation
 \letterdate{\today}
 % The title of the letter
-\lettertitle{Job Application for Senior Fullstack Engineer (Rails/React)}
+\lettertitle{Senior Lead Fullstack Developer (focus on Frontend) - Utrecht}
 % How the letter is opened
 \letteropening{\\Dear Hiring Team,\\}
 % How the letter is closed
 \letterclosing{Sincerely,}
 % Any enclosures with the letter
-\letterenclosure[Attached]{Curriculum Vitae}
+\letterenclosure[Attached]{Resume}
 
 
 %-------------------------------------------------------------------------------
@@ -125,22 +125,22 @@
 % \lettersection{Why Google?}
 % \lettersection{Why Me?}
 
-This letter is to express my interest in your posting for Job Application for Senior Fullstack Engineer (Rails/React). With a Bachelor’s degree in Computer Science and hands-on experience using REST APIs with Django, JavaScript (ES6+), React, Redux and TypeScript, to create and implement web applications, I am confident that I would be a valuable addition to your team.\\
+This letter is to express my interest in your posting for Job Application for Senior Lead Fullstack Developer (focus on Frontend). With the extensive experience that I have gathered while working as a Full Stack Developer for 6+ years I believe I can be a valuable asset to your company.\\
 
-At Arbisoft, for the most time I worked on the development of an Application Tracking System which manages the recruiting and hiring process, including job postings and job applications, as a lead front‐end developer. I’ve also worked on Arbisoft’s In‐house ERP (Enterprise Resource Planning) that empowers the organization by automating many HR and accounts functions. I also successfully collaborate on solutions with our product, QA, marketing teams and clients to offer the best user experience and to provide customers with more value.\\
+At Fashion Cloud B.V., I work as a development captain in the B2B Order team which is responsible for digitizing the process of restocking and pre-ordering clothing articles for retailers and allowing brands to promote themselves and their products. As a development captain, I am responsible for closely collaborating with product managers and designers, delegation of tasks, handling cross team communication, improving development experience by identifying and tackling pain points, handling technical debt, and helping my team to grow\\
 
-Your listed requirements closely match my background and skills. A few I would like to highlight that would enable me to contribute to your bottom line are:\\
+Your listed requirements are a good match with my background and skills. A few that I would like to highlight are:\\
 
 \begin{cvitems}
-\item{4 years of full-time experience with Javascript, Typescript, and React}
-\item{4 years experience with Python and Django}
-\item{Testing experience with Jasmine and Django Tests}
-\item{Experience in mentoring junior colleagues}
-\item{Excellent spoken and written English communication }
+\item{2+ years of Angular and 4 years of React experience}
+\item{Experience with NodeJS, Typescript, and AWS}
+\item{Experience working with product managers and designers}
+\item {Experience in leading a team of 4 developers}
+\item {A team player who encourages collaboration and communication}
 \\\\
 \end{cvitems}
 
-I’ve attached a copy of my resume detailing my experience. I would enjoy an opportunity to chat about your upcoming plans and share with you how my achievements and experience in past projects can prove valuable. I am available for an interview at your most convenient time and date. I can be reached anytime via my cellphone at +92-324-4208140 or via email at ali60351@gmail.com. Thank you for your consideration.
+I’ve attached a copy of my resume detailing my experience. I would enjoy an opportunity to chat about your upcoming plans and discuss how I can be a good fit for the team. I am available for an interview at your most convenient time and date. Thank you for your consideration.
 
 
 \end{cvletter}
